--- a/kursus/contact.html
+++ b/kursus/contact.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Final Project</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Anton|Germania+One|ZCOOL+XiaoWei" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css"integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -29,8 +31,8 @@
                     <h3>Contact Me</h3>
                     <span>Get in touch with me</span>
                 </div>
-                <h2>Terima Kasih Sudah Melihat Final Project Saya <i class="far fa-smile-beam"></i></h2>
-                <h4>Saya sangat mengapresiasi jika ada kritik atau saran juga sekedar ingin berkawan, jangan sungkan untuk mengirim pesan <i class="far fa-laugh-beam"></i> </h4>
+                <h1>Terima Kasih Sudah Melihat Final Project Saya <i class="far fa-smile-beam"></i></h1> <br>
+                <h3>Saya sangat mengapresiasi jika ada kritik atau saran juga sekedar ingin berkawan, jangan sungkan untuk mengirim pesan <i class="far fa-laugh-beam"></i> </h3>
                 <form id="contactform" method="POST" action="https://formspree.io/sultankosasih@gmail.com" target="_blank" />
                     <div class="form-group">
                         <label>Name</label>
@@ -45,7 +47,7 @@
                         <textarea name="message" class="form-control" placeholder="Your messages"></textarea>
                     </div>
                     <div>
-                        <input type="submit" value="send" class="btn btn-success"/>
+                        <input type="submit"  value="send" class="btn btn-success btn-lg"/>
                     </div>
                 </form>
             </div>
